--- a/CardExchange.API/appsettings.Development.json
+++ b/CardExchange.API/appsettings.Development.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CardExchangeDb_Dev;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
+  "JwtSettings": {
+    "SecretKey": "DevelopmentSecretKeyForJWTTokenGeneration123!@#DEV",
+    "Issuer": "CardExchangeAPI",
+    "Audience": "CardExchangeUsers",
+    "AccessTokenExpirationMinutes": 120,
+    "RefreshTokenExpirationDays": 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
