--- a/CardExchange.API/appsettings.json
+++ b/CardExchange.API/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CardExchangeDb;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
+  "JwtSettings": {
+    "SecretKey": "YourSuperSecretKeyForJWTTokenGeneration123!@#",
+    "Issuer": "CardExchangeAPI",
+    "Audience": "CardExchangeUsers",
+    "AccessTokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
